--- a/index.html
+++ b/index.html
@@ -6,8 +6,62 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
 </head>
-<body>
+  <body>
+    <header>
+      <h1>枯山水</h1>
+      <h2>Rock Gardens</h2>
+      <nav>
+        <ul>
+          <li><a href="#">Viewing</a></li>
+          <li><a href="#">Gravel</a></li>
+          <li><a href="#">Symbolism</a></li>
+        </ul>
+      </nav>
+      <img src="images/banner.svg" alt="">
+    </header>
+
+      <div>
+        <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+        <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+      </div>
+
+      <div>
+        <img src="images/viewing.svg" alt="">
+        <h3>閲覧</h3>
+        <h4>Viewing</h4>
+        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <a href="#">Learn more about Viewing</a>
+      </div>
+
+      <div class="unit xs-1 s-1 m-1-2 l-1-3">
+        <img src="images/gravel.svg" alt="">
+        <h3>砂利</h3>
+        <h4>Gravel</h4>
+        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <a href="#">Learn more about Gravel</a>
+      </div>
+
+      <div class="unit xs-1 s-1 m-1 l-1-3">
+        <img src="images/symbolism.svg" alt="">
+        <h3>象徴主義</h3>
+        <h4>Symbolism</h4>
+        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <a href="#">Learn more about Symbolism</a>
+      </div>
+
+      <div class="unit xs-1 s-1 m-1 l-1">
+        <footer>
+          <p>© 794 Heian Period</p>
+        </footer>
+      </div>
+
+    </div>
+
+
+  </body>
+  </html>
 
 
 
