--- a/index.html
+++ b/index.html
@@ -10,62 +10,55 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
 </head>
-  <body>
-    <header>
-      <h1>枯山水</h1>
+<body>
+
+  <header role="banner">
+    <div class="title">
+      <h1> <i lang="ja">枯山水</i></h1>
       <h2>Rock Gardens</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Viewing</a></li>
-          <li><a href="#">Gravel</a></li>
-          <li><a href="#">Symbolism</a></li>
-        </ul>
-      </nav>
-      <img src="images/banner.svg" alt="">
-    </header>
+    </div>
+    <nav role="navigation">
+      <ul>
+        <li><a href="#">Viewing</a></li>
+        <li><a href="#">Gravel</a></li>
+        <li><a href="#">Symbolism</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <div>
-        <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
-        <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
-      </div>
+  <main role="main">
+    <img class="image" src="images/banner.svg" alt="">
 
-      <div>
-        <img src="images/viewing.svg" alt="">
-        <h3>閲覧</h3>
-        <h4>Viewing</h4>
-        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
-        <a href="#">Learn more about Viewing</a>
-      </div>
-
-      <div class="unit xs-1 s-1 m-1-2 l-1-3">
-        <img src="images/gravel.svg" alt="">
-        <h3>砂利</h3>
-        <h4>Gravel</h4>
-        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-        <a href="#">Learn more about Gravel</a>
-      </div>
-
-      <div class="unit xs-1 s-1 m-1 l-1-3">
-        <img src="images/symbolism.svg" alt="">
-        <h3>象徴主義</h3>
-        <h4>Symbolism</h4>
-        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-        <a href="#">Learn more about Symbolism</a>
-      </div>
-
-      <div class="unit xs-1 s-1 m-1 l-1">
-        <footer>
-          <p>© 794 Heian Period</p>
-        </footer>
-      </div>
-
+    <div class="intro">
+      <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
+      <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </div>
 
+    <section>
+      <article>
+        <img src="images/viewing.svg" alt="">
+        <h2 id="viewing"><i lang="ja">閲覧</i><span>Viewing</span></h2>
+        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <a href="#">Learn more about Viewing</a>
+      </article>
+      <article>
+        <img src="images/gravel.svg" alt="">
+        <h2 id="gravel"><i lang="ja">砂利</i><span>Gravel</span></h2>
+        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <a href="#">Learn more about Gravel</a>
+      </article>
+      <article>
+        <img src="images/symbolism.svg" alt="">
+        <h2 id="symbolism"><i lang="ja">象徴主義</i><span>Symbolism</span></h2>
+        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <a href="#">Learn more about Symbolism</a>
+      </article>
+    </section>
+  </main>
 
-  </body>
-  </html>
-
-
+  <footer role="contentinfo">
+    <small>© 794 Heian Period</small>
+  </footer>
 
 </body>
 </html>
