--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
   <meta charset="utf-8">
   <title>Rock Gardens</title>
   <link href="css/main.css" rel="stylesheet">
-  <meta name="handheldfriendly" content="true">
-  <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
 </head>
 <body>
 
   <header role="banner">
-    <div class="title">
-      <h1> <i lang="ja">枯山水</i></h1>
-      <h2>Rock Gardens</h2>
-    </div>
+    <h1><i lang="ja">枯山水</i><span>Rock Gardens</span></h1>
     <nav role="navigation">
       <ul>
-        <li><a href="#">Viewing</a></li>
-        <li><a href="#">Gravel</a></li>
-        <li><a href="#">Symbolism</a></li>
+        <li><a href="#viewing">Viewing</a></li>
+        <li><a href="#gravel">Gravel</a></li>
+        <li><a href="#symbolism">Symbolism</a></li>
       </ul>
     </nav>
   </header>
